--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER}@${HOST} '
             cd /var/www/laravel &&
-            git pull origin main &&
+            git pull origin master &&
             composer install --no-dev --optimize-autoloader &&
             php artisan config:cache &&
             php artisan route:cache &&
